--- a/src/components/VariableDetailPage.scss
+++ b/src/components/VariableDetailPage.scss
@@ -5,6 +5,7 @@
 
   &__title {
     font-size: 2.5rem;
+    margin-bottom: .4em;
   }
 
   &__text {
@@ -24,5 +25,11 @@
       color: white;
       background: rgb(97, 171, 231);
     }
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .variable__text {
+    text-align: center;
   }
 }
